--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
-
     "name": "discord-meme-bot",
-
-    "description": "A simple discord bot written in Javascript and optimized to run on Heroku, that sends one of your memes, every time is sent the command",
-
-    "version": "0.1.0",
-
+    "description": "A simple discord bot written in Javascript and optimized to run on Heroku or in its docker image, that sends one of your memes, every time is sent the command",
+    "version": "0.1.1",
     "main": "bot.js",
-
     "scripts": {
-
         "start": "node bot.js"
-
     },
-
     "dependencies": {
-
         "discord.js": "12.2.0",
-
-        "request": "2.81.0"
-
+        "request": "^2.88.2"
     }
-
 }
